<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_track"
        android:icon="@drawable/ic_track_changes_black_48dp"
        app:showAsAction="always"
        android:title="@string/tracks" />
    <item
        android:id="@+id/action_loved"
        android:icon="@drawable/ic_favorite_border_black_48dp"
        app:showAsAction="always"
        android:title="@string/favourites" />
    <item
        android:id="@+id/action_playlist"
        android:icon="@drawable/ic_audiotrack_black_48dp"
        app:showAsAction="always"
        android:title="@string/playlist" />
    <item
        android:id="@+id/action_market"
        android:icon="@drawable/ic_shop_two_black_48dp"
        app:showAsAction="always"
        android:title="@string/market" />

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_black_48dp"
        app:showAsAction="never"
        android:title="@string/home" />

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        app:showAsAction="never"
        android:title="@string/settings" />
</menu>